[package]
name = "station-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
ordoo = "0.1.1"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.8.2"
serde_json = "1.0.105"
paho-mqtt = "0.12.2"
# scode-rs = { path = "../scode-rs" }
scode-rs = { git = "https://github.com/ttocsneb/scode-rs.git", rev = "5fe964b" }
rppal = "0.14.1"
